--- a/index.css
+++ b/index.css
@@ -177,6 +177,7 @@ body,html{
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 5;
 }
 .cmr-carNumBox{
     width: 1.67rem;
@@ -192,7 +193,7 @@ body,html{
     position: absolute;
     right: 1.8rem;
     top: 0.9rem;
-    font-family: SourceHanSansCN-Regular;
+    font-family: "SourceHanSansCN-Regular";
     font-size: 0.67rem;
     color: #FFFFFF;
     letter-spacing: 0.13px;
@@ -206,7 +207,7 @@ body,html{
 .cmr-addCar{
     width: 7.8rem;
     background-image: linear-gradient(-90deg, #E3CAA7 1%, #BFAB8E 100%);
-    font-family: SourceHanSansCN-Bold;
+    font-family: "SourceHanSansCN-Bold";
     font-size: 1.07rem;
     color: #FFFFFF;
     letter-spacing: 0;
@@ -222,7 +223,7 @@ body,html{
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     padding-left: 1rem;
-    font-family: SourceHanSansCN-Normal;
+    font-family: "SourceHanSansCN-Normal";
     font-size: 0.93rem;
     color: #352D2B;
     letter-spacing: 0;
@@ -233,7 +234,8 @@ body,html{
     left: 0;
     bottom: 3.2rem;
     background: #FFFFFF;
-    box-shadow: 0 0 999rem rgba(0,0,0,0.30);
+    box-shadow: 0 0 0 999rem rgba(0,0,0,0.30);
+    z-index: 2;
 }
 .cmr-fcAddCar{
     list-style: none;
@@ -288,6 +290,15 @@ body,html{
 }
 .cmr-fcMg{
     flex: 1;
+}
+.cmr-fcMg .cmr-close{
+    display: inline-block;
+    width: 1.51rem;
+    height: 1.51rem;
+    text-align: center;
+    font-size: 1.51rem;
+    margin-right: 0.71rem;
+    margin-top: 0.71rem;
 }
 .cmr-fcAction{
     display: flex;
